# maestro

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  env.example  maestro-anyapi.py  maestro-gpt4o.py  maestro-groq.py  maestro-lmstudio.py  maestro-ollama.py  maestro.py  maestro_dev.py  maestro_llmstudio.py  pyproject.toml  requirements.txt
flask_app/: 22-26-52_To_create_a_markdown_auto.md  app.py  maestro_anyapi.py  requirements.txt
flask_app/MarkdownFormatter/markdown_formatter/tests/: main.py  test_markdown_formatter.py
flask_app/static/css/: style.css
src/: maestro-gpt.py  maestro.py
templates/: base.html  index.html
