[tool.poetry]
name = "maestro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.26.0"
rich = "^13.7.1"
tavily-python = "^0.3.3"
ollama = "^0.2.0"
groq = "^0.6.0"
openai = "^1.30.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
